<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger">Messenger</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>